# psc_stack

./: .gitignore
EPIC_poongsan/: .gitignore
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/: CMakeLists.txt  package.xml
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/config/: fast-lio.yaml  garage.yaml  real.yaml
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/docs/: LOG_GUIDE.md
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/include/epic_planner/: event_logger.h  fast_exploration_fsm.h
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/launch/: algorithm.xml
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/records/epic_2026-07-03-15-04-35/: epic_2026-07-03-15-04-35.params.yaml
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/scripts/: plot_session.py  record_on_goal.py  run_batch_experiment.sh
EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/src/: fast_exploration_fsm.cpp  fsm_utils.cpp
EPIC_poongsan/src/EPIC/src/global_planner/frontier_manager/include/frontier_manager/: frontier_manager.h
EPIC_poongsan/src/EPIC/src/global_planner/lidar_map/src/: sim_lio.cpp
EPIC_poongsan/src/EPIC/src/global_planner/utils/lkh_tsp_solver/resource/: single.par  single.tsp
EPIC_poongsan/src/EPIC/src/local_planner/minco_planner/launch/: px4_bridge.launch
EPIC_poongsan/src/EPIC/src/local_planner/minco_planner/src/: planner_manager.cpp  px4_ctrl_bridge.cpp
EPIC_poongsan/src/EPIC/src/odom_visualization/src/: odom_visualization.cpp
reactive_local_avoidance/: CMakeLists.txt  package.xml
reactive_local_avoidance/config/: local_avoidance.yaml
reactive_local_avoidance/src/: local_avoidance.cpp
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/: CMakeLists.txt  EVALUATION.md  package.xml
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/config/: real.rviz  real.rviz.bak
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/launch/: real_flight.launch  replay_tuning.launch
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/scripts/: evaluate_exploration.py  plot_experiment_results.py  record_on_goal.py  rviz_on_param.py
src/EPIC_poongsan/src/EPIC/src/global_planner/exploration_manager/src/: fast_exploration_manager.cpp  fsm_utils.cpp
src/EPIC_poongsan/src/EPIC/src/global_planner/frontier_manager/src/: frontier_manager.cpp  global_planning.cpp
src/EPIC_poongsan/src/EPIC/src/local_planner/minco_planner/: CMakeLists.txt  package.xml
src/EPIC_poongsan/src/EPIC/src/waypoint_generator/src/: waypoint_generator.cpp
src/reactive_local_avoidance/launch/: local_avoidance.launch
src/reactive_local_avoidance/scripts/: avoid_mux.py  pc2_to_livox.py
(+10 files in other folders)
